--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
-#clock{
+#nowClock {
     font-family:Tahoma, sans-serif;
     font-size:20px;
     font-weight:bold;
     color:#0000cc;	
+  }
+  #nowDate {
+    font-family:Tahoma, sans-serif;
+    font-size:20px;
+    font-weight:bold;
+    color: #0000cc;	
   }
